# Data_Ingestion_by_Dataflow

./: .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt
custom_template_pipeline_csv/: Dockerfile  README.md  metadata.json  schema.json  template_pipeline.py
without_template_pipeline/: README.md  pipeline.py  requirements.txt
